# MLOps_FootballWCPredictor

./: .dvcignore  .gitignore  AGENTS.md  Dockerfile  README.md  dvc.yaml  environment.txt  pyproject.toml
.cursor/context-transfers/: a3f7d2b1.md  k7v2m9p4.md  m4e9k1c7.md  p7x3w9k2.md  q8m2n5r1.md  r3w8n5q2.md  v5t8j2w6.md
.cursor/plans/: pipeline_fixes_and_reruns_08fa4f91.plan.md
.cursor/rules/: project.mdc  python.mdc
.dvc/: config
data/: .gitignore  raw.dvc
data/mappings/: api_football_tournaments.csv  elo_code_map.csv  team_mapping_master_merged.csv
data/tournament/: wc2026.json
docs/: acceptance_criteria.md  architecture.md  data_sources.md  deployment_plan.md  feature_spec.md  feature_v2_baseline.md  modeling_plan.md  project_brief.md  repo_plan.md  requirements.md  testing_strategy.md  threats_to_validity.md  versioning_and_reproducibility.md
docs/figures/: architecture_ct_pipeline.mmd
docs/reference/: daily_trigger.yml.reference  tournament_trigger.yml.reference
docs/report/: paper.tex  references.bib  wc_mlops_report.tex
scripts/: backfill_wc_shadow.py  scrape_wc2026_bracket.py
src/dashboard/: __init__.py  app.py  load_artifacts.py
src/gold/: build_gold.py  cluster_experiment.py  cluster_experiment_v2.py  context_features.py  rolling_features.py  schema.py  tactical_clustering.py  temporal_features.py
src/inference/: features.py  logging.py  predict.py  run.py  simulation.py
src/ingestion/: api_football_client.py  build_elo_code_map.py  download_api_football_national_matches.py  download_elo_tsvs.py  fixture_status.py  (+1 more)
(+66 files in other folders)
