[project]
name = "wc-mlops"
version = "0.1.0"
description = "Minimal but serious MLOps pipeline for football World Cup prediction"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "statsmodels>=0.14.0",
  "xgboost>=2.0.0",
  "mlflow>=2.16.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.0",
  "dvc>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"